[Bugfix] Cut overflow text in CSS way

--- a/app/stylesheets/compass/sass/modules/_welcome.scss
+++ b/app/stylesheets/compass/sass/modules/_welcome.scss
@@ -871,6 +871,10 @@
             }
         }
 
+        .button-user {
+            width: 255px;
+        }
+
         &.logged-in {
             pointer-events: none;
         }
